# py3make

./: LICENCE  MANIFEST.in  Makefile  README.rst  TODO.txt  pyproject.toml  tox.ini
.github/workflows/: ci-build.yml  ci-cd.yml
examples/: simple_examples.py
pymake/: _main.py  _pymake.py  _version.py
src/py3make/: _main.py  _pymake.py  _version.py
src/py3make/tests/: tests_pymake.py
tests/: test_main.py  test_version.py
